--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "title":"GitBlog",
-    "subTitle":"Blog description",
+    "title":"qingss的博客",
+    "subTitle":"GitBlog",
     "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
     "GMEEK_VERSION":"last"
 }
